2001-06-25  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* zsh-users/3942: source installed as Etc/FAQ.yo: latest FAQ.

2001-06-25  Clint Adams  <clint@zsh.org>

	* 15079: Completion/Unix/Command/_last,
	Completion/Unix/Type/_users: last
	takes other arguments than users.

2001-06-25  Peter Stephenson  <pws@csr.com>

	* 15030: Doc/Zsh/grammar.yo, Src/loop.c, Src/parse.c, Src/text.c:
	`for' loops can take multiple parameter names before the `in'
	or left parenthesis, each of which takes one word from the list
	on each iteration.

2001-06-25  Sven Wischnowsky  <wischnow@zsh.org>

	* user/3940: Src/Zle/zle_tricky.c: make expand-word not always
	restore the command line

2001-06-24  Bart Schaefer  <schaefer@zsh.org>

	* 15060: Test/A02alias.ztst: Change expected return value to
	account for 15050.

	* 15060: Test/Y01completion.ztst, Test/Y02compmatch.ztst,
	Test/Y03arguments.ztst, Test/comptest: Abandon the tests during
	the %prep section if the zpty module can't be loaded.	

	* 15057: Src/exec.c: PRINT_EXIT_VALUE for shell functions, too.

2001-06-23  Bart Schaefer  <schaefer@zsh.org>

	* 15056: Src/Zle/zle_tricky.c: Change magic-space to recognize
	whether !" (quote against history expansion) has been typed.

	* 15050, 15054: Src/exec.c: Change exit status of external
	commands that could not be executed, to comply with POSIX.

2001-06-22  Andrej Borsenkow  <bor@zsh.org>

	* 15021: Src/prompt.c, Doc/Zsh/prompt.yo: revert to old %l
	semantic; add new %y character instead as suggested by Wayne

	* 15038: Test/A01grammar.ztst: test case for 15023.
	(unposted) fix a couple of typos in test decriptions

2001-06-21  Sven Wischnowsky  <wischnow@zsh.org>

	* 15029: Completion/Unix/Command/_man: improve pattern matching
	to make match specs work for manual page completion

2001-06-21  Bart Schaefer  <schaefer@zsh.org>

	* 15023, 15027: Src/parse.c: Accept newlines before the "in"
	keyword in "for" and "select", per POSIX.
