@@ -1,3 +1,8 @@
+2001-06-26  Sven Wischnowsky  <wischnow@zsh.org>
+
+	* 15087: Src/jobs.c: make warning message for disowning stopped
+	jobs more verbose (saying how to make the job running again)
+
 2001-06-25  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>
 
 	* zsh-users/3942: source installed as Etc/FAQ.yo: latest FAQ.
